--- a/index.css
+++ b/index.css
@@ -29,6 +29,78 @@ a.hover {
   margin-top: 50px;
   margin-left: 20px;
 }*/
+.daisy1 {
+  width: 50px;
+  margin-left: 50px;
+  position: absolute;
+}
+.daisy2 {
+  width: 28px;
+  margin-left: 50px;
+  margin-top: 220PX;
+  position: absolute;
+}
+ .daisy3 {
+  width: 25px;
+  margin-left: 50px;
+  margin-top: 220PX;
+  position: absolute;
+}
+.daisy4 {
+  width: 40px;
+  margin-left: 70px !IM ;
+  margin-top: 220PX;
+
+  position: absolute;
+}
+.daisy5 {
+  width: 50px;
+  margin-left: 50px;
+  position: absolute;
+  z-index: -1;
+}
+.daisy6 {
+  width: 20px;
+  margin-left: 50px;
+  margin-top: 105px;
+  z-index: -1;
+
+  position: absolute;
+}
+.daisy7 {
+  width: 25px;
+  margin-left: 135px;
+  z-index: -1;
+  margin-top: 210px !important;
+  position: absolute;
+}
+.daisy8 {
+  width: 40px;
+  z-index: -1;
+  margin-left: 50px;
+  position: absolute;
+}
+.daisy9{
+  z-index: -1;
+  width: 40px;
+  margin-left: 50px;
+  margin-top: 205px;
+  position: absolute;
+}
+.daisy10 {
+  width: 30px;
+  z-index: -1;
+  margin-left: 50px;
+  margin-top: 105px;
+  /*position: absolute;*/
+}
+.daisy11 {
+  width: 43px;
+  z-index: -1;
+  margin-left: 50px;
+  margin-top: 105px;
+  position: absolute;
+}
 
 /*start of MAX-Width screen 580px---------------------------------------------------------------------------------------------------*/
 @media screen and (max-width: 580px) {
@@ -86,15 +158,6 @@ a.hover {
    #rsvp  {
     font-family: 'Rouge Script', cursive;
     font-size: 120px;
-    margin-top: 10%;
-    border-style: dotted;
-    border-color: rgb(191, 120, 52);
-    background-color: rgba(191, 120, 52, 0.2)
-
-  }
-
-  #daisy {
-  width: 140px;
   }
 
 
@@ -164,7 +227,7 @@ a.hover {
     font-size: 80px;
   }
 
-  #daisy {
+  .daisy {
     width: 80px;
   }
 
@@ -201,7 +264,7 @@ a.hover {
 }  /* close media screen MAX 580 ------------------------------------------------------------------------------------------------ */
 
 
-/*Start MIN 581------------------------------------------------------------------------------------------------*/
+/*Start MIN 581----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 @media only screen and (min-width : 581px) and (max-width : 767px) {
   .jumbotron {
     padding: 0px 0px 195px 0px;
@@ -229,10 +292,15 @@ a.hover {
     border-radius: 10px;
   }
 
+
   #details_section {
     color: rgb(5, 5, 5);
   }
-
+  #jessNereus {
+    margin-top: 50px !important;
+    font-size: 44px !important;
+    font-family: 'Rouge Script', cursive;
+  }
   #weddingDate {
     font-family: times, Times New Roman, times-roman, georgia, serif;
     margin-left: 10px;
@@ -242,11 +310,6 @@ a.hover {
     font-weight: bold;
   }
 
-  #jessNereus {
-    margin-top: 50px !important;
-    font-size: 44px !important;
-    font-family: 'Rouge Script', cursive;
-  }
 
   #details {
     margin-top: 50px;
@@ -259,7 +322,7 @@ a.hover {
 
   }
 
-  #daisy {
+  .daisy {
   width: 140px;
   }
 
@@ -311,13 +374,17 @@ a.hover {
     width: 350px;
     border-radius: 10px;
   }
-} /*close MIN @media 581 ------------------------------------------------------------------------------------------------*/
+} /*close MIN @media 581 ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
 @media only screen and (min-width : 768px) and (max-width : 1024px) and (orientation : portrait) {
   .mx-auto {
     height: 200px;
     width: 350px;
     border-radius: 10px;
+  }
+  .happyCouple {
+    font-size: 45px;
+    font-family: 'Rouge Script', cursive;
   }
 
   #weddingDate {
@@ -330,10 +397,6 @@ a.hover {
     font-weight: bold;
   }
 
-  .happyCouple {
-    font-size: 45px;
-    font-family: 'Rouge Script', cursive;
-  }
   .boxed {
     text-align: left;
     font-size: 30px;
@@ -351,7 +414,7 @@ a.hover {
     background-image: url("images/jumbo.PNG");
   }
 
-  #daisy {
+  .daisy {
   width: 250px;
   }
 
@@ -400,7 +463,7 @@ a.hover {
   }
 }
 
-/*begin largest screen here----------------------------------------------------------------------------------------------------*/
+/*begin largest screen here----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
   @media only screen and (min-width: 1025px) and (max-width: 2580px) {
     /*@media only screen and (min-width : 581px) and (max-width : 767px) {*/
 
@@ -410,12 +473,23 @@ a.hover {
 
     }
 
+
+      #details_section {
+        color: lightpink;
+        margin-top: 60px;
+        /*margin-left: 35px;*/
+      }
+
     .getting {
       margin: 0pt 0pt 0pt 50pt;
       color: rgb(5, 5, 5);
     }
 
-
+    .happyCouple {
+      font-size: 65px;
+      font-family: 'Rouge Script', cursive;
+      letter-spacing: 2px;
+    }
 
     #weddingDate {
       font-family: times, Times New Roman, times-roman, georgia, serif;
@@ -423,18 +497,14 @@ a.hover {
       padding: 0px 0px 6px 0px;
       font-size: 51px;
       line-height: 44px;
-      letter-spacing: -2px;
+      letter-spacing: 7px;
       font-weight: bold;
     }
 
-    .happyCouple {
-      font-size: 65px;
-      font-family: 'Rouge Script', cursive;
-    }
 
     #family {
       height: 350px;
-      border-radius: 10pt;
+      border-radius: 150pt;
     }
     /*.boxed {
       text-align: left;
@@ -444,24 +514,91 @@ a.hover {
 
     }*/
     #details {
-      font-size: 24pt;
-      padding-top: 30px;
+      font-size: 14pt;
       margin-top: 20px;
     }
 
     #rsvp  {
+      position: relative;
+      z-index: 1;
       font-family: 'Rouge Script', cursive;
       text-align: center;
       font-size: 200px;
-      margin-top: 10%;
-      border-radius: 50px;
-      border-style: dotted;
-      border-color: rgb(191, 120, 52);
-      background-color: rgba(191, 120, 52, 0.2)
-    }
+      /*margin-top: 35%;*/
 
-    #daisy {
-    width: 250px;
+
+      /*border-radius: 50px;*/
+      /*border-style: dotted;*/
+      /*border-color: rgb(191, 120, 52);*/
+      /*background-color: rgba(191, 120, 52, 0.2)*/
+    }
+    .daisy1 {
+      width: 50px;
+      margin-left: 50px;
+      position: absolute;
+    }
+    .daisy2 {
+      width: 50px;
+      margin-left: 50px;
+      position: absolute;
+    }
+     .daisy3 {
+      width: 25px;
+      margin-left: 50px;
+      position: absolute;
+    }
+   .daisy4 {
+      width: 40px;
+      margin-left: 50px;
+      position: absolute;
+    }
+   .daisy5 {
+      width: 50px;
+      margin-left: 50px;
+      position: absolute;
+      z-index: -1;
+    }
+   .daisy6 {
+      width: 20px;
+      margin-left: 50px;
+      margin-top: 105px;
+      z-index: -1;
+
+      position: absolute;
+    }
+    .daisy7 {
+      width: 25px;
+      margin-left: 150px;
+      z-index: -1;
+      margin-top: 50px !important;
+      position: absolute;
+    }
+    .daisy8 {
+      width: 40px;
+      z-index: -1;
+      margin-left: 50px;
+      position: absolute;
+    }
+    .daisy9{
+      z-index: -1;
+      width: 40px;
+      margin-left: 50px;
+      margin-top: 105px;
+      position: absolute;
+    }
+    .daisy10 {
+      width: 30px;
+      z-index: -1;
+      margin-left: 50px;
+      margin-top: 105px;
+      /*position: absolute;*/
+    }
+    .daisy11 {
+      width: 43px;
+      z-index: -1;
+      margin-left: 50px;
+      margin-top: 105px;
+      position: absolute;
     }
 
     #goingToMontanaHeader {
