--- a/index.css
+++ b/index.css
@@ -1,23 +1,8 @@
-body {
-  padding-top: 14px;
-  background-color: rgb(140, 62, 100);
-  color: white;
-}
+
 
 .jumbotron {
   background-image: url('images/jumbo.PNG');
   background-size: cover;
-}
-
-happyCouple.{
-font-family: 'Rouge Script', cursive;
-}
-
-a {
-  color: rgb(191, 120, 52);
-}
-a.hover {
-  color: red
 }
 
 .mx-auto {
@@ -25,10 +10,33 @@ a.hover {
    width: 350px;
    border-radius: 10pt;
 }
-/*.getting {
-  margin-top: 50px;
-  margin-left: 20px;
-}*/
+
+body {
+    background-color: rgb(140, 62, 100);
+    color: lightgray;
+}
+
+#gettingMarried {
+  font-weight: bold;
+}
+#weddingDate {
+  font-family: times, Times New Roman, times-roman, georgia, serif;
+  font-weight: bold;
+}
+#rsvp  {
+  font-family: 'Rouge Script', cursive;
+}
+hr {
+  border-color: pink;
+  border-width: thin;
+}
+a {
+  color: rgb(191, 120, 52);
+}
+
+/*#jessNereus{
+font-family: 'Rouge Script', cursive;
+}
 .daisy1 {
   width: 50px;
   margin-left: 50px;
@@ -48,7 +56,7 @@ a.hover {
 }
 .daisy4 {
   width: 40px;
-  margin-left: 70px !IM ;
+  margin-left: 70px;
   margin-top: 220PX;
 
   position: absolute;
@@ -64,7 +72,6 @@ a.hover {
   margin-left: 50px;
   margin-top: 105px;
   z-index: -1;
-
   position: absolute;
 }
 .daisy7 {
@@ -93,17 +100,168 @@ a.hover {
   margin-left: 50px;
   margin-top: 105px;
   /*position: absolute;*/
-}
-.daisy11 {
+
+/*.daisy11 {
   width: 43px;
   z-index: -1;
   margin-left: 50px;
   margin-top: 105px;
   position: absolute;
 }
+}*/
+
+@media screen and (max-width : 454px) {
+
+ #family {
+   width: 200px;
+ }
+ .jumbotron {
+   padding: 0px 0px 150px 0px;
+   border-radius: 40px !important;
+ }
+
+ #menu {
+   margin-left: 20px;
+   font-size: 15px;
+   color: white;
+ }
+
+ .getting {
+   margin: 0pt 0pt 0pt 30pt;
+ }
+
+ #jessNereus {
+   margin-top: 50px !important;
+   margin-left: -20px;
+   font-size: 34px !important;
+   font-family: 'Rouge Script', cursive;
+ }
+
+ #gettingMarried {
+   font-size: 10pt;
+   letter-spacing: 1pt;
+   margin-top: -10px;
+ }
+
+ #weddingDate {
+   padding: 0px 0px 6px 0px;
+   font-size: 20px;
+   line-height: 10px;
+   margin: 0px;
+ }
+
+ #weddingLocation {
+   font-size: 12px;
+   margin-top: 5px;
+
+ }
+
+ #family {
+   width: 150px;
+   border-radius: 10px;
+ }
+ #details {
+   margin-top: 30px;
+   line-height: 30px;
+   letter-spacing: -1;
+   font-size: 12px;
+ }
+
+ #rsvp {
+   font-size: 70px;
+   margin-left: -60px;
+ }
+ .daisy1 {
+   width: 10px;
+   margin-left: 50px;
+   position: absolute;
+ }
+ .daisy2 {
+   width: 28px;
+   margin-left: 50px;
+   margin-top: 20PX;
+   position: absolute;
+ }
+  .daisy3 {
+   width: 25px;
+   margin-left: 30px;
+   margin-top: 30PX;
+   position: absolute;
+ }
+ .daisy4 {
+   width: 40px;
+   margin-left: 100px;
+   margin-top: 10PX;
+   position: absolute;
+ }
+ .daisy5 {
+   width: 20px;
+   position: absolute;
+ }
+ .daisy6 {
+   width: 10px !important;
+   margin-left: 50px;
+   margin-top: 105px;
+   z-index: -1;
+   position: absolute;
+ }
+ .daisy7 {
+   width: 25px;
+   margin-left: 135px;
+   z-index: -1;
+   margin-top: 40px !important;
+   position: absolute;
+ }
+ .daisy8 {
+   width: 40px;
+   z-index: -1;
+   margin-left: 50px;
+   position: absolute;
+ }
+ .daisy9{
+   z-index: -1;
+   width: 40px;
+   margin-left: 50px;
+   margin-top: 205px;
+   position: absolute;
+ }
+ .daisy10 {
+   width: 30px;
+   z-index: -1;
+   margin-left: 50px;
+   margin-top: 105px;
+   position: absolute;
+ }
+ .daisy11 {
+   width: 4px;
+   z-index: -1;
+   margin-left: 50px;
+   margin-top: 105px;
+   position: absolute;
+ }
+ #goingToMontanaHeader {
+   font-family: times, Times New Roman, times-roman, georgia, serif;
+   margin: 0;
+   padding: 0px 0px 6px 0px;
+   font-size: 27px;
+   line-height: 64px;
+   letter-spacing: -2px;
+   font-weight: bold;
+   text-align: center;
+ }
+
+ #lotsToSee {
+   font-size: 17px;
+ }
+ .montana {
+   font-size: 40px;
+   text-align: right;
+ }
+
+}
 
 /*start of MAX-Width screen 580px---------------------------------------------------------------------------------------------------*/
-@media screen and (max-width: 580px) {
+@media screen and (min-width: 454px) and (max-width: 580px) {
   .jumbotron {
     padding: 0px 0px 150px 0px;
     border-radius: 40px !important;
@@ -119,7 +277,7 @@ a.hover {
     color: rgb(5, 5, 5);
   }
 
-  #weddingTime {
+  #weddingLocation {
     font-size: 18px;
   }
   #gettingMarried {
@@ -133,31 +291,97 @@ a.hover {
     border-radius: 10px;
   }
 
-  #details_section {
-    color: rgb(5, 5, 5);
-  }
-
   #weddingDate {
-    font-family: times, Times New Roman, times-roman, georgia, serif;
     padding: 0px 0px 6px 0px;
     font-size: 20px;
     line-height: 10px;
-    font-weight: bold;
   }
 
   #jessNereus {
     margin-top: 50px !important;
-    font-size: 25px;
+    font-size: 50px !important;
     font-family: 'Rouge Script', cursive;
   }
 
   #details {
-    margin-top: 30px;
+    margin-top: 40px;
+    line-height: 30px;
+    letter-spacing: -1;
   }
 
    #rsvp  {
-    font-family: 'Rouge Script', cursive;
     font-size: 120px;
+  }
+  .daisy1 {
+    width: 50px;
+    margin-left: 50px;
+    position: absolute;
+  }
+  .daisy2 {
+    width: 28px;
+    margin-left: 50px;
+    margin-top: 220PX;
+    position: absolute;
+  }
+   .daisy3 {
+    width: 25px;
+    margin-left: 50px;
+    margin-top: 220PX;
+    position: absolute;
+  }
+  .daisy4 {
+    width: 40px;
+    margin-left: 70px;
+    margin-top: 220PX;
+
+    position: absolute;
+  }
+  .daisy5 {
+    width: 50px;
+    margin-left: 50px;
+    position: absolute;
+    z-index: -1;
+  }
+  .daisy6 {
+    width: 20px;
+    margin-left: 50px;
+    margin-top: 105px;
+    z-index: -1;
+    position: absolute;
+  }
+  .daisy7 {
+    width: 25px;
+    margin-left: 135px;
+    z-index: -1;
+    margin-top: 210px !important;
+    position: absolute;
+  }
+  .daisy8 {
+    width: 40px;
+    z-index: -1;
+    margin-left: 50px;
+    position: absolute;
+  }
+  .daisy9{
+    z-index: -1;
+    width: 40px;
+    margin-left: 50px;
+    margin-top: 205px;
+    position: absolute;
+  }
+  .daisy10 {
+    width: 30px;
+    z-index: -1;
+    margin-left: 50px;
+    margin-top: 105px;
+    /*position: absolute;*/
+  }
+  .daisy11 {
+    width: 43px;
+    z-index: -1;
+    margin-left: 50px;
+    margin-top: 105px;
+    position: absolute;
   }
 
 
@@ -193,38 +417,8 @@ a.hover {
     font-weight: bold;
   }
 
-  /*.attractionDescription {
-    font-family: times, Times New Roman, times-roman, georgia, serif;
-    margin: 0;
-    padding: 0px 0px 6px 0px;
-    font-size: 41px;
-    line-height: 44px;
-    letter-spacing: -2px;
-    font-weight: bold;
-  }*/
-
-
-
   .boxed {
     font-size: 16px;
-  }
-
-  .happyCouple {
-    font-size: 35px;
-      font-family: 'Rouge Script', cursive;
-  }
-
-  .montana {
-    font-size: 30px;
-  }
-
-  #lotsToSee {
-    font-size: 20px;
-  }
-
-  #rsvp  {
-    font-family: 'Rouge Script', cursive;
-    font-size: 80px;
   }
 
   .daisy {
@@ -235,21 +429,6 @@ a.hover {
     display: flex;
     flex-wrap: wrap;
     align-content: space-around;
-  }
-
-  .boxForDescriptions {
-    background-size: cover
-  }
-
-  #goingToMontanaHeader {
-    font-family: times, Times New Roman, times-roman, georgia, serif;
-    margin: 0;
-    font-size: 24px;
-    line-height: 34px;
-    font-weight: bold;
-    text-align: left;
-    padding-top: 15px;
-    padding-bottom: 15px;
   }
 
   .col-xs-5{
@@ -264,10 +443,11 @@ a.hover {
 }  /* close media screen MAX 580 ------------------------------------------------------------------------------------------------ */
 
 
-/*Start MIN 581----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
-@media only screen and (min-width : 581px) and (max-width : 767px) {
+/*Start MIN 581-MAX 767---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+@media only screen and (min-width : 581px) and (max-width : 745px) {
   .jumbotron {
     padding: 0px 0px 195px 0px;
+    border-radius: 50px !important;
   }
 
   #menu {
@@ -276,56 +456,61 @@ a.hover {
   }
 
   .getting {
-    margin-top: 50px;
+    margin-top: 10px;
     margin-left: 20px;
+
   }
-  #weddingTime {
-    margin-left: 10px;
+  #details_section {
+    color: rgb(5, 5, 5);
+    margin-left: 30px;
   }
+
+  #jessNereus {
+    margin-top: 50px !important;
+    margin-left: -20px;
+    font-size: 67px !important;
+    letter-spacing: -4px;
+    font-family: 'Rouge Script', cursive;
+  }
+
   #gettingMarried {
-    font-size: 19pt;
+    font-size: 1px !important;
     margin-left: 10px;
+    margin-top: -14px;
+    letter-spacing: 6px;
+  }
+
+  #weddingDate {
+    margin-left: 10px;
+    padding: 0px 0px 6px 0px;
+    font-size: 42px;
+    line-height: 24px;
+  }
+
+  #weddingLocation {
+    margin-left: 12px;
+    font-family:serif;
+    font-size: 25px;
+    font-weight: lighter;
   }
 
   #family {
-    height: 250px;
+    height: 200px;
     border-radius: 10px;
   }
 
-
-  #details_section {
-    color: rgb(5, 5, 5);
-  }
-  #jessNereus {
-    margin-top: 50px !important;
-    font-size: 44px !important;
-    font-family: 'Rouge Script', cursive;
-  }
-  #weddingDate {
-    font-family: times, Times New Roman, times-roman, georgia, serif;
-    margin-left: 10px;
-    padding: 0px 0px 6px 0px;
-    font-size: 30px !important;
-    line-height: 44px;
-    font-weight: bold;
-  }
-
-
   #details {
     margin-top: 50px;
+    line-height: 35px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
-   #rsvp  {
-    font-family: 'Rouge Script', cursive;
+   #rsvp{
+    margin-left: -40px !important;
     font-size: 120px;
     margin-top: 10%;
-
   }
-
-  .daisy {
-  width: 140px;
-  }
-
 
   #goingToMontanaHeader {
     font-family: times, Times New Roman, times-roman, georgia, serif;
@@ -341,6 +526,7 @@ a.hover {
   #lotsToSee {
     font-size: 27px;
   }
+
   .montana {
     font-size: 70px;
     text-align: right;
@@ -374,44 +560,138 @@ a.hover {
     width: 350px;
     border-radius: 10px;
   }
-} /*close MIN @media 581 ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
-@media only screen and (min-width : 768px) and (max-width : 1024px) and (orientation : portrait) {
+  .daisy1 {
+    width: 50px;
+    margin-left: 50px;
+    position: absolute;
+  }
+  .daisy2 {
+    width: 28px;
+    margin-left: 50px;
+    margin-top: 220PX;
+    position: absolute;
+  }
+   .daisy3 {
+    width: 25px;
+    margin-left: 50px;
+    margin-top: 220PX;
+    position: absolute;
+  }
+  .daisy4 {
+    width: 40px;
+    margin-left: 70px;
+    margin-top: 220PX;
+
+    position: absolute;
+  }
+  .daisy5 {
+    width: 50px;
+    margin-left: 50px;
+    position: absolute;
+    z-index: -1;
+  }
+  .daisy6 {
+    width: 20px;
+    margin-left: 50px;
+    margin-top: 105px;
+    z-index: -1;
+    position: absolute;
+  }
+  .daisy7 {
+    width: 25px;
+    margin-left: 135px;
+    z-index: -1;
+    margin-top: 210px !important;
+    position: absolute;
+  }
+  .daisy8 {
+    width: 40px;
+    z-index: -1;
+    margin-left: 50px;
+    position: absolute;
+  }
+  .daisy9{
+    z-index: -1;
+    width: 40px;
+    margin-left: 50px;
+    margin-top: 205px;
+    position: absolute;
+  }
+  .daisy10 {
+    width: 30px;
+    z-index: -1;
+    margin-left: 50px;
+    margin-top: 105px;
+    /*position: absolute;*/
+  }
+  .daisy11 {
+    width: 43px;
+    z-index: -1;
+    margin-left: 50px;
+    margin-top: 105px;
+    position: absolute;
+  }
+} /*close MIN 581-MAX 767---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+/*start 746-1024-------------------------------------------*/
+@media only screen and (min-width : 746px) and (max-width : 1024px) {
+  .jumbotron {
+      padding: 0px 0px 215px 0px;
+      border-radius: 60px !important;
+  }
+  #family {
+    height: 200px;
+    border-radius: 20px;
+    margin-top: -18px;
+  }
+  #details_section {
+    margin-top: 40px;
+    margin-left: 20px;
+  }
+  #jessNereus {
+    font-size: 70px;
+    letter-spacing: -4px;
+    line-height: 10px;
+    margin-left: -30px;
+  }
+  #gettingMarried {
+    font-size: 17px;
+    letter-spacing: 8px;
+    margin-top: 5px;
+    /*line-height: 5px;*/
+  }
+  #weddingDate {
+    font-family: times, Times New Roman, times-roman, georgia, serif;
+    padding: 0px 0px 6px 0px;
+    font-size: 41px;
+    line-height: 34px;
+    font-size: 30px;
+    margin: 0;
+  }
+  #weddingLocation{
+    font-size: 25px;
+  }
+  #details {
+    margin-top: 50px;
+    line-height: 60px;
+  }
+  #the {
+    font-size: 40px;
+    font-family: 'Rouge Script', cursive;
+  }
+
+/*}*/
+/*@media only screen and (min-width : 781px) and (max-width : 1024px) and (orientation : portrait) {*/
   .mx-auto {
     height: 200px;
     width: 350px;
     border-radius: 10px;
   }
-  .happyCouple {
-    font-size: 45px;
-    font-family: 'Rouge Script', cursive;
-  }
-
-  #weddingDate {
-    font-family: times, Times New Roman, times-roman, georgia, serif;
-    margin: 0;
-    padding: 0px 0px 6px 0px;
-    font-size: 51px;
-    line-height: 44px;
-    letter-spacing: -2px;
-    font-weight: bold;
-  }
-
-  .boxed {
-    text-align: left;
-    font-size: 30px;
-    margin-right: 100px;
-    font-family: 'Rouge Script', cursive;
-  }
 
   #rsvp  {
-    font-family: 'Rouge Script', cursive;
-    text-align: center;
-    font-size: 200px;
-    margin-top: 10%;
-    border-radius: 50px;
-    /*background-color: rgba(10,50,80,0.5);*/
-    background-image: url("images/jumbo.PNG");
+    font-size: 100px;
+    margin-top: 40% !important;
   }
 
   .daisy {
@@ -463,39 +743,38 @@ a.hover {
   }
 }
 
-/*begin largest screen here----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+/*begin largest screen here---1025+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
   @media only screen and (min-width: 1025px) and (max-width: 2580px) {
     /*@media only screen and (min-width : 581px) and (max-width : 767px) {*/
 
     .jumbotron {
-      padding: 0px 0px 440px 0px;
+      padding: 0px 0px 400px 0px;
       border-radius: 80px !important;
+    }
+
+    #details_section {
+      color: lightpink;
+      margin-left: 30px;
+      margin-top: 50px;
+    }
+
+    #jessNereus {
+      font-size: 86px;
+      letter-spacing: -4px;
+      margin-left: -20px !important;
+      line-height: 40px;
 
     }
 
-
-      #details_section {
-        color: lightpink;
-        margin-top: 60px;
-        /*margin-left: 35px;*/
-      }
-
-    .getting {
-      margin: 0pt 0pt 0pt 50pt;
-      color: rgb(5, 5, 5);
-    }
-
-    .happyCouple {
-      font-size: 65px;
-      font-family: 'Rouge Script', cursive;
-      letter-spacing: 2px;
+    #details {
+      line-height: 65px;
     }
 
     #weddingDate {
       font-family: times, Times New Roman, times-roman, georgia, serif;
       margin: 0;
       padding: 0px 0px 6px 0px;
-      font-size: 51px;
+      font-size: 41px;
       line-height: 44px;
       letter-spacing: 7px;
       font-weight: bold;
@@ -504,15 +783,9 @@ a.hover {
 
     #family {
       height: 350px;
-      border-radius: 150pt;
+      border-radius: 100pt;
     }
-    /*.boxed {
-      text-align: left;
-      font-size: 30px;
-      margin-right: 100px;
-      font-family: 'Rouge Script', cursive;
 
-    }*/
     #details {
       font-size: 14pt;
       margin-top: 20px;
@@ -524,14 +797,8 @@ a.hover {
       font-family: 'Rouge Script', cursive;
       text-align: center;
       font-size: 200px;
-      /*margin-top: 35%;*/
-
-
-      /*border-radius: 50px;*/
-      /*border-style: dotted;*/
-      /*border-color: rgb(191, 120, 52);*/
-      /*background-color: rgba(191, 120, 52, 0.2)*/
     }
+
     .daisy1 {
       width: 50px;
       margin-left: 50px;
@@ -637,7 +904,6 @@ a.hover {
 
     .attractionDescription {
       font-family: times, Times New Roman, times-roman, georgia, serif;
-
       padding: 0px 0px 6px 0px;
       font-size: 18px;
       line-height: 44px;
