--- a/index.css
+++ b/index.css
@@ -1,5 +1,3 @@
-
-
 .jumbotron {
   background-image: url('images/jumbo.PNG');
   background-size: cover;
@@ -24,16 +22,26 @@ body {
   font-weight: bold;
 }
 #rsvp  {
-  font-family: 'Rouge Script', cursive;
+  font-family: times, Times New Roman, times-roman, georgia, serif;
+  font-weight: bold;
+  text-align: center;
 }
+
 hr {
   border-color: pink;
   border-width: thin;
 }
 a {
-  color: rgb(191, 120, 52);
+  color: lightpink;
 }
 
+a:hover {
+  color: lightgreen;
+}
+#the {
+  font-size: 40px;
+  font-family: 'Rouge Script', cursive;
+}
 /*#jessNereus{
 font-family: 'Rouge Script', cursive;
 }
@@ -111,7 +119,10 @@ font-family: 'Rouge Script', cursive;
 }*/
 
 @media screen and (max-width : 430px) {
-
+  #registry {
+    height: 450px;
+    position: relative;
+  }
  #family {
    width: 200px;
  }
@@ -170,7 +181,7 @@ font-family: 'Rouge Script', cursive;
 
  #rsvp {
    font-size: 70px;
-   margin-left: -60px;
+   text-align: center;
  }
  .daisy1 {
    width: 10px;
@@ -267,7 +278,10 @@ font-family: 'Rouge Script', cursive;
     padding: 0px 0px 150px 0px;
     border-radius: 40px !important;
   }
-
+  #registry {
+    height: 450px;
+    position: relative;
+  }
   #menu {
     margin-left: 30px;
     font-size: 25px;
@@ -275,7 +289,7 @@ font-family: 'Rouge Script', cursive;
 
   .getting {
     margin: 0pt 0pt 0pt 30pt;
-    color: rgb(5, 5, 5);
+
   }
 
   #jessNereus {
@@ -313,6 +327,7 @@ font-family: 'Rouge Script', cursive;
     line-height: 30px;
     letter-spacing: -1;
   }
+
 
    #rsvp  {
     font-size: 120px;
@@ -454,7 +469,10 @@ font-family: 'Rouge Script', cursive;
     padding: 0px 0px 195px 0px;
     border-radius: 50px !important;
   }
-
+  #registry {
+    height: 450px;
+    position: relative;
+  }
   #menu {
     margin-left: 60px;
     font-size: 25px;
@@ -511,7 +529,7 @@ font-family: 'Rouge Script', cursive;
     margin-right: 20px;
   }
 
-   #rsvp{
+   .a{
     margin-left: -40px !important;
     font-size: 120px;
     margin-top: 10%;
@@ -799,7 +817,6 @@ font-family: 'Rouge Script', cursive;
     #rsvp  {
       position: relative;
       z-index: 1;
-      font-family: 'Rouge Script', cursive;
       text-align: center;
       font-size: 200px;
     }
