fixed out of line attraction elements/descriptions!

--- a/index.css
+++ b/index.css
@@ -117,14 +117,20 @@ a:hover {
 width:  100px;
 }
 
-/*.parent {
+.parent {
+  display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
 }
 
 .child {
-  flex-wrap: wrap;
-  flex-direction: column;
-}*/
+  flex-grow: 5;
+  align-items: flex-start;
+}
+
+p {
+margin:  0px 22px -31px !important;
+}
 
  /*
  #jessNereus {
