--- a/index.css
+++ b/index.css
@@ -20,7 +20,8 @@ body {
 }
 
 #weddingDate {
-  font-family: times, Times New Roman, times-roman, georgia, serif;
+  font-family: serif;
+  font: 400 100px/2.9 'Great Vibes', Helvetica, sans-serif;
   font-weight: bold;
   padding: 0px 0px 6px 0px;
   font-size: 2.9vw;
@@ -59,6 +60,7 @@ a:hover {
 
 
  #weddingLocation {
+   font: 400 100px/2.9 'Great Vibes', Helvetica, sans-serif;
    font-size: 2.9vw;
    padding-left: 15%;
  }
@@ -153,6 +155,19 @@ img#rsvp {
   margin-top: 45%;
     width: 100%;
 }
+
+
+  #details {
+    margin-top: 50px;
+    line-height: 35px;
+    margin-left: 20px;
+    margin-right: 20px;
+    border-style: inset;
+
+    /*border: black;*/
+    border-radius: 20px;
+    border-color: gray;
+  }
 
  /*
  #jessNereus {
@@ -410,12 +425,6 @@ img#rsvp {
     border-radius: 10px;
   }
 
-  #details {
-    margin-top: 50px;
-    line-height: 35px;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
 
    .a{
     margin-left: -40px !important;
