--- a/index.css
+++ b/index.css
@@ -76,6 +76,12 @@ a:hover {
 
 #shuttle {
   font-size: 1.9vw;
+  border-color: rgba(260, 36, 158, 5.5);
+  border-style: inset;
+  border-width: 20px;;
+  border-right-width: 20px;
+  border-top-width: 20px;
+  text-align: center;
 }
 
 #goingToMontanaHeader {
@@ -119,12 +125,30 @@ a:hover {
   justify-content: flex-start;
   max-width: 100%;
   margin: 40px auto 0 auto;
+  width: 100%;
 }
 
 .child {
   flex-basis: 30%;
   margin-left: 10%;
   width: 40px;
+  flex: 1;
+ padding: 16px;
+}
+
+.parent2 {
+  display: flex;
+  justify-content: flex-start;
+  max-width: 100%;
+  margin: 40px auto 0 auto;
+  width: 100%;
+}
+
+.child2 {
+  flex-basis: 30%;
+  margin: 10%;
+  width: 40px;
+  flex: 1;
 }
 
 p {
@@ -158,15 +182,12 @@ img#rsvp {
 
 
   #details {
-    margin-top: 50px;
-    line-height: 35px;
-    margin-left: 20px;
-    margin-right: 20px;
     border-style: inset;
-
-    /*border: black;*/
-    border-radius: 20px;
-    border-color: gray;
+    border-width: 20px;
+    border-color: rgba(260, 36, 158, 5.5);
+    text-align: center;
+    font-size: 1.9vw;
+    box-sizing: border-box;
   }
 
  /*
