fixed zola link!

--- a/index.css
+++ b/index.css
@@ -79,7 +79,7 @@ position: absolute;
   text-align: center;
 }
 .jessNereus{
-  color: rgb(9, 4,4);
+  color: rgb(9, 4, 4);
 /*/  margin-top: 141px !important;*/
 
   padding-top: 17vw;
