--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ body, html {
 
 }
 
+
 .flexbox-container {
   height: 100%;
   background-repeat: repeat;
@@ -48,8 +49,10 @@ a:hover {
   color: yellow;
   /*color: rgb(150,200,239);*/
   margin-top: 100%;
-  /*font-family: 'Alex Brush', cursive;*/
-  font-family: 'Oranienbaum', serif;
+  /*font-family: 'Italianno', cursive;*/
+  font-family: 'Pinyon Script', cursive;
+  /*font-family: 'Oranienbaum', serif;*/
+    /*font-family: 'Tangerine', cursive;*/
 }
 
 #hearts {
@@ -120,6 +123,8 @@ position: absolute;
 }
 h1, h6 {
   color: yellow;
+  font-family: 'Italianno', cursive;
+/*font-family: 'Pinyon Script', cursive;*/
 }
 
 .child {
@@ -129,9 +134,6 @@ h1, h6 {
   padding: 16px;
   text-align: center;
   font-size: 9vw;
-  font-weight: bold;
-  /*color: rgb(150,200,239);*/
-    /*text-shadow: 2px 2px rgba(11,53,46, 0.6);*/
 }
 
 h1  {
@@ -168,8 +170,19 @@ h6 {
   flex: 1;
 }
 
-#love{
-  color: yellow;
+.love{
+  color: dodgerblue;
+  font-family: 'Tangerine', cursive;
+  font-size: 4vw;
+}
+#love {
+  font-size: 7vw;
+}
+
+#weddingGifts {
+  text-align: center;
+  padding-top: 3vw;
+  font-size: 2vw;
 }
 
 p {
